--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "elo_oop",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -38,6 +39,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
+    "react-native-vision-camera": "^4.5.0",
     "react-native-web": "~0.19.10",
     "uuid": "^10.0.0"
   },
